# fastapi_study

./: .env  database.py  main.py  models.py  myapi.db  pyproject.toml  study.ipynb
domain/answer/: answer_crud.py  answer_router.py  answer_schema.py
domain/question/: question_crud.py  question_router.py  question_schema.py
frontend/: package-lock.json
frontend/src/: App.svelte  main.js
frontend/src/components/: Error.svelte  Navigation.svelte
frontend/src/lib/: api.js
frontend/src/routes/: Detail.svelte  Home.svelte  QuestionCreate.svelte
migrations/: env.py
migrations/versions/: 683780f2731d_.py  fd1120d9a042_init_db.py
