[project]
name = "my-man-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "nest-asyncio>=1.6.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
